--- a/app/src/main/res/layout/note_preview_layout.xml
+++ b/app/src/main/res/layout/note_preview_layout.xml
@@ -16,8 +16,10 @@
         <TextView
             android:id="@+id/note_title"
             style="@style/NoteBriefHeader"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:layout_columnSpan="3"
             android:layout_gravity="fill"
             tools:text="@string/notes_title_text" />
@@ -34,6 +36,8 @@
             android:layout_width="match_parent"
             android:layout_gravity="fill"
             android:layout_columnSpan="4"
+            android:ellipsize="end"
+            android:maxLines="1"
             style="@style/NoteBriefText"
             tools:text="@string/note_tools_body_text" />
     </GridLayout>
